--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   json_annotation: ^3.0.0
-  rxdart: ^0.22.3
+  rxdart: ^0.23.1
   cached_network_image: ^2.0.0
   page_indicator: ^0.3.0
   intl: ^0.16.0
@@ -33,6 +33,8 @@ dependencies:
   camera: ^0.5.2+1
   path_provider: ^1.1.0
   path: ^1.6.2
+  flutter_bloc: ^4.0.1
+  equatable: ^1.0.0
 
 dev_dependencies:
   flutter_test:
