--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -35,7 +35,7 @@ dependencies:
   path: ^1.6.2
   flutter_bloc: ^4.0.1
   equatable: ^1.0.0
-
+  provider: ^4.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
