--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_bloc: ^4.0.1
   equatable: ^1.0.0
   provider: ^4.0.5
+  shared_preferences: ^0.5.8
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
